<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/textViewAboutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/about_about_header" />

    <View
         android:id="@+id/aboutHeaderDivider"
         android:background="#cccccc"
         android:layout_width = "fill_parent"
         android:layout_height="2sp"
         android:layout_marginTop="5sp"
         android:layout_marginBottom="15sp"
         android:layout_below="@id/textViewAboutHeader" />

    <TextView
        android:id="@+id/textViewAboutContents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutHeaderDivider"
        android:text="@string/about_contents" />

    <TextView
        android:id="@+id/textViewBuildHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="25sp"
        android:layout_below="@id/textViewAboutContents"
        android:text="@string/about_build_header" />

    <View
         android:id="@+id/aboutBuildDivider"
         android:background="#cccccc"
         android:layout_width = "fill_parent"
         android:layout_height="2sp"
         android:layout_marginTop="5sp"
         android:layout_marginBottom="15sp"
         android:layout_below="@id/textViewBuildHeader" />

    <TextView
        android:id="@+id/textViewAboutBuild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutBuildDivider"
        android:text="" />
</RelativeLayout>
